crates/ridl-core/src/snapshots/ridl_core__diag__json_tests__to_json_keeps_the_code_field_present_when_empty.snap
---
source: crates/ridl-core/src/diag.rs
expression: "to_json(&[diagnostic], &sources)"
---
[
  {
    "code": "",
    "severity": "error",
    "message": "expected a type, but `FROB` names a constant",
    "span": {
      "path": "",
      "start": {
        "line": 1,
        "column": 1
      },
      "end": {
        "line": 1,
        "column": 1
      }
    },
    "labels": [],
    "fixes": []
  }
]
